@@ -5,7 +5,7 @@
  * Author: Giovanni Giacobbi <johnny@themnemonic.org>
  * Copyright (C) 2002  Giovanni Giacobbi
  *
- * $Id: proto.h,v 1.20 2002-05-23 20:56:27 themnemonic Exp $
+ * $Id: proto.h,v 1.21 2002-05-24 18:06:47 themnemonic Exp $
  */
 
 /***************************************************************************
@@ -23,9 +23,9 @@
  ***************************************************************************/
 
 /* core.c */
-int core_connect(netcat_sock *ncsock);
-int core_listen(netcat_sock *ncsock);
-int core_readwrite(netcat_sock *nc_main, netcat_sock *nc_tunnel);
+int core_connect(nc_sock_t *ncsock);
+int core_listen(nc_sock_t *ncsock);
+int core_readwrite(nc_sock_t *nc_main, nc_sock_t *nc_tunnel);
 
 /* flagset.c */
 bool netcat_flag_init(unsigned int len);
@@ -46,15 +46,17 @@ void netcat_printversion(void);
 
 /* netcat.c */
 extern bool opt_listen, opt_tunnel, opt_numeric, opt_random, opt_hexdump,
-		opt_udpmode, opt_telnet, opt_zero;
+		opt_telnet, opt_zero;
 extern int opt_interval, opt_verbose, opt_wait;
 extern char *opt_outputfile;
+extern nc_proto_t opt_proto;
 extern FILE *output_fd;
 extern unsigned long bytes_sent, bytes_recv;
+extern bool use_stdin;
 
 /* network.c */
-bool netcat_resolvehost(netcat_host *dst, char *name);
-bool netcat_getport(netcat_port *dst, const char *port_string,
+bool netcat_resolvehost(nc_host_t *dst, char *name);
+bool netcat_getport(nc_port_t *dst, const char *port_string,
 		    unsigned short port_num);
 int netcat_inet_pton(const char *src, void *dst);
 const char *netcat_inet_ntop(const void *src);
